<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/title_label"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etTitleEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/url_label"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etURLEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_hint" 
        android:inputType="textUri"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/update_label" />

        <Button
            android:id="@+id/btnCancelEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/cancel_label" />
    </LinearLayout>

</LinearLayout>